--- a/plotter.ipynb
+++ b/plotter.ipynb
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import chart_studio.plotly as pl"
+    "import chart_studio.plotly as pl\n",
+    "from assets.fileexplorer import fileExplorer"
    ]
   },
   {
@@ -91,32 +92,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def upload_data():\n",
+    "    print('Select your data')\n",
+    "    ex_formats = ['xls', 'xlsx', 'xlsm', 'xlsb', 'odf', 'ods', 'odt']\n",
+    "    file_path = fileExplorer()\n",
+    "    if file_path.endswith('csv'):\n",
+    "        x = pd.read_csv(file_path)\n",
+    "    elif file_path.endswith('xlsx'):\n",
+    "        x = pd.read_excel(file_path)\n",
+    "    elif file_path.endswith('json'):\n",
+    "        x = pd.read_json(file_path)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the Column headers:\n",
-      "a\n",
-      "b\n",
-      "c\n",
-      "Insert the values for each row\n",
-      "Values for row 0\n",
-      "Column 0: 2\n",
-      "Column 1: 4\n",
-      "Column 2: 5\n",
-      "Values for row 1\n",
-      "Column 0: 4\n",
-      "Column 1: 4\n",
-      "Column 2: 4\n",
-      "[['2', '4', '5'], ['4', '4', '4']]\n"
+      "Select your data\n",
+      "C:/Users/Michael/Desktop/International_Breweries.csv\n"
      ]
     }
    ],
    "source": [
-    "def upload"
+    "upload_data()"
    ]
   },
   {
