Upload data function complete and working

--- a/plotter.ipynb
+++ b/plotter.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,27 +92,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def upload_data():\n",
-    "    print('Select your data')\n",
+    "    print('Select your data:')\n",
     "    ex_formats = ['xls', 'xlsx', 'xlsm', 'xlsb', 'odf', 'ods', 'odt']\n",
     "    file_path = fileExplorer()\n",
     "    if file_path.endswith('csv'):\n",
     "        x = pd.read_csv(file_path)\n",
-    "    elif file_path.endswith('xlsx'):\n",
+    "    elif [True for f in ex_formats if file_path.endswith(f)][0]:\n",
     "        x = pd.read_excel(file_path)\n",
     "    elif file_path.endswith('json'):\n",
     "        x = pd.read_json(file_path)\n",
+    "    else:\n",
+    "        print('File Type is not supported!')\n",
+    "    if 'x' in locals():\n",
+    "        df = pd.DataFrame(x)\n",
+    "        'File Upload su'\n",
+    "        return df\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +126,32 @@
      "output_type": "stream",
      "text": [
       "Select your data\n",
-      "C:/Users/Michael/Desktop/International_Breweries.csv\n"
+      "   SALES_ID SALES_REP               EMAILS       BRANDS  PLANT_COST  \\\n",
+      "0     10101   Jardine       jard@gmail.com       trophy         150   \n",
+      "1     10102      Gill      gillhell@uk.com    budweiser         250   \n",
+      "2     10103   Sorvino  sorvi2000@gmail.com  castle lite         180   \n",
+      "3     10104     Jones    jone.ai@yahoo.com  eagle lager         170   \n",
+      "4     10105   Andrews       andy@gmail.com         hero         150   \n",
+      "\n",
+      "   UNIT_PRICE  QUANTITY    COST  PROFIT COUNTRIES     REGION     MONTHS  YEARS  \n",
+      "0         200       725  145000   36250     Ghana   Southeast   January   2019  \n",
+      "1         500       815  407500  203750   Nigeria        west  February   2018  \n",
+      "2         450       937  421650  252990      Togo  southsouth     March   2018  \n",
+      "3         250       765  191250   61200     Benin   northwest     April   2018  \n",
+      "4         200       836  167200   41800   Senegal  northeast        May   2017  \n"
      ]
     }
    ],
    "source": [
-    "upload_data()"
+    "print(upload_data().head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
