Upload data function complete and working

--- a/plotter.ipynb
+++ b/plotter.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
     "        print('File Type is not supported!')\n",
     "    if 'x' in locals():\n",
     "        df = pd.DataFrame(x)\n",
-    "        'File Upload su'\n",
+    "        print('File Upload successful')\n",
     "        return df\n",
     "    \n",
     "    "
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "print(upload_data().head())"
+    "upload_data()"
    ]
   },
   {
