--- a/plotter.ipynb
+++ b/plotter.ipynb
@@ -5,6 +5,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install chart_studio"
@@ -54,11 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_data(row, col):\n",
+    "    \"\"\"Generate Random dataframe of given dimensions\"\"\"\n",
     "    x = np.random.rand(row, col)\n",
     "    df = pd.DataFrame(x)\n",
     "    return df"
@@ -66,20 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_data(row, col):\n",
     "    # set up column headers\n",
-    "    x = [0 for c in range(col)]\n",
     "    print('Enter the Column headers:')\n",
-    "    for i in range(len(x)):\n",
-    "        x[i]= input()\n",
-    "        i += 1\n",
+    "    x = [input(f'Column {c+1}:') for c in range(col)]\n",
     "    # get row values\n",
     "    print('Insert the values for each row')\n",
     "    rows = []\n",
+    "    # get all row values for the different columns\n",
     "    for i in range(row):\n",
     "        print(f'Values for row {i+1}')\n",
     "        row_value = [input(f'Column {c+1}: ') for c in range(col)]\n",
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +106,7 @@
     "    print('Select your data:')\n",
     "    ex_formats = ['xls', 'xlsx', 'xlsm', 'xlsb', 'odf', 'ods', 'odt']\n",
     "    file_path = fileExplorer()\n",
+    "    # detect file extensions and adapt to necessary conversion\n",
     "    if file_path.endswith('csv'):\n",
     "        x = pd.read_csv(file_path)\n",
     "    elif [True for f in ex_formats if file_path.endswith(f)][0]:\n",
@@ -108,6 +115,7 @@
     "        x = pd.read_json(file_path)\n",
     "    else:\n",
     "        print('File Type is not supported!')\n",
+    "    # check if x has been declared before converting and returning as a dataframe\n",
     "    if 'x' in locals():\n",
     "        df = pd.DataFrame(x)\n",
     "        print('File Upload successful')\n",
@@ -118,40 +126,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    try:\n",
+    "        user_choice = int(input('Select and option between 1-3\\n'))\n",
+    "        if user_choice in range(1,4):\n",
+    "            if user_choice == 1:\n",
+    "                rows = int(input('How many rows do you want to generate? '))\n",
+    "                cols = int(input('How many columns do you want to generate? '))\n",
+    "                df = random_data(rows, cols)\n",
+    "            elif user_choice == 2:\n",
+    "                rows = int(input('How many rows do you want to create? '))\n",
+    "                cols = int(input('How many columns do you want to create? '))\n",
+    "                df = create_data(rows, cols)\n",
+    "            elif user_choice == 3:\n",
+    "                df = upload_data()\n",
+    "            return df\n",
+    "        else:\n",
+    "            print('Please select a number in the range of 1-3!!!')\n",
+    "    except ValueError:\n",
+    "        print('Please enter a number not a string!!!')\n",
+    "    except Exception:\n",
+    "        print('Sorry, we ran into a problem there!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_data(intent, plot_type):\n",
+    "    if intent == 'yes' \n",
+    "    pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotter():\n",
+    "    plot_intent = input('Do you want to plot all columns? Yes/No\\n').lower()\n",
+    "    print(\"\"\"Choose the preferred type of plot: \\n\n",
+    "        1. Line Plot \\n\n",
+    "        2. Scatter Plot \\n\n",
+    "        3. Bar Plot \\n\n",
+    "        4. Histogram \\n\n",
+    "        5. Box Plot \\n\n",
+    "        6. Surface Plot \\n\n",
+    "        7. Bubble Plot(Not available when plotting all columns)\"\"\")\n",
+    "    plot_type = int(input('Enter a number: '))\n",
+    "    plot_data(plot_intent, plot_type)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Select your data\n",
-      "   SALES_ID SALES_REP               EMAILS       BRANDS  PLANT_COST  \\\n",
-      "0     10101   Jardine       jard@gmail.com       trophy         150   \n",
-      "1     10102      Gill      gillhell@uk.com    budweiser         250   \n",
-      "2     10103   Sorvino  sorvi2000@gmail.com  castle lite         180   \n",
-      "3     10104     Jones    jone.ai@yahoo.com  eagle lager         170   \n",
-      "4     10105   Andrews       andy@gmail.com         hero         150   \n",
+      "Choose the preferred type of plot: \n",
       "\n",
-      "   UNIT_PRICE  QUANTITY    COST  PROFIT COUNTRIES     REGION     MONTHS  YEARS  \n",
-      "0         200       725  145000   36250     Ghana   Southeast   January   2019  \n",
-      "1         500       815  407500  203750   Nigeria        west  February   2018  \n",
-      "2         450       937  421650  252990      Togo  southsouth     March   2018  \n",
-      "3         250       765  191250   61200     Benin   northwest     April   2018  \n",
-      "4         200       836  167200   41800   Senegal  northeast        May   2017  \n"
+      "        1. Line Plot \n",
+      "\n",
+      "        2. Scatter Plot \n",
+      "\n",
+      "        3. Bar Plot \n",
+      "\n",
+      "        4. Histogram \n",
+      "\n",
+      "        5. Box Plot \n",
+      "\n",
+      "        6. Surface Plot \n",
+      "\n",
+      "        7. Bubble Plot\n"
      ]
     }
    ],
    "source": [
-    "upload_data()"
+    "plotter()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
